--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,8 @@
 name: Release Build
 
 on:
-  push:
-    tags:
-      - 'v*'
   release:
-    types: [published]
+    types: [created]
   workflow_dispatch:
     inputs:
       version:
@@ -16,6 +13,8 @@ on:
 jobs:
   build:
     runs-on: windows-latest
+    permissions:
+      contents: write
     
     steps:
     - name: Checkout code
@@ -53,7 +52,7 @@ jobs:
         Write-Output "Executable size: $([math]::Round($exe.Length/1MB,2)) MB"
         
     - name: Upload Release Assets
-      if: github.event_name == 'release' || startsWith(github.ref, 'refs/tags/')
+      if: github.event_name == 'release'
       uses: softprops/action-gh-release@v1
       with:
         files: |
