--- a/src/SpecTrace/SpecTrace.csproj
+++ b/src/SpecTrace/SpecTrace.csproj
@@ -5,6 +5,8 @@
     <TargetFramework>net8.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <Nullable>enable</Nullable>
+    <RootNamespace>SpecTrace</RootNamespace>
+    <AssemblyName>SpecTrace</AssemblyName>
     
     <!-- Assembly Information -->
     <AssemblyTitle>SpecTrace</AssemblyTitle>
@@ -56,10 +58,6 @@
 
   <ItemGroup>
     <Resource Include="..\..\spectrace.ico" />
-    <Resource Include="Themes\LightTheme.xaml" />
-    <Resource Include="Themes\DarkTheme.xaml" />
   </ItemGroup>
-
-
 
 </Project>
